50 move rule minor change and 3 fold repetition added

--- a/polyglot.ini
+++ b/polyglot.ini
@@ -1,8 +1,9 @@
 [Polyglot]
-EngineName=Sunfish
-EngineCommand=python3 sunfish.py
+EngineName=Cagnus_Marlsen
+EngineCommand=pypy3 sunfish.py
 EngineDirectory=.
 Log=true
 LogFile=polyglot.log
 XBoard=true
 
+[Engine]
